Fix 1px gap on sidebar and other padded areas
git-svn-id: https://buddypress.svn.wordpress.org/branches/1.2@3077 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -35,7 +35,7 @@ a { color: #1fb3dd; }
 a:hover, a:active { color: #888; }
 a:focus { outline: 1px dotted #ccc; }
 
-.padder { padding: 20px; }
+.padder { padding: 19px; }
 .clear { clear: left; }
 
 p {	margin-bottom: 15px; }
